--- a/Titanic Data Project.ipynb
+++ b/Titanic Data Project.ipynb
@@ -167,6 +167,86 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Overall survival rate\n",
+    "\n",
+    "As an introduction to the analysis, here's the overall survival rate for the sample\n",
+    "\n",
+    "### 38.3% of passengers survived"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.383838383838\n"
+     ]
+    }
+   ],
+   "source": [
+    "print passenger_data.mean()['Survived']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Survival rate by sex\n",
+    "\n",
+    "Obviously both males and females boarded the Titanic, here's their survival rate.\n",
+    "\n",
+    "### 74.2% of females survived\n",
+    "\n",
+    "### 18.9% of males survived"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sex\n",
+      "female    0.742038\n",
+      "male      0.188908\n",
+      "Name: Survived, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print passenger_data.groupby('Sex').mean()['Survived']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Survival by ticket class\n",
+    "\n",
+    "Passengers could purchase three types of tickets to board the Titanic: first class, second class, and third class. Here's the breakdown of the survival rate by ticket class.\n",
+    "\n",
+    "### 62.9% of first class ticket holders survived\n",
+    "\n",
+    "### 47.3% of second class ticket holders survived\n",
+    "\n",
+    "### 24.2% of third class ticket holders survived"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 56,
    "metadata": {
