data wrangling - age group

--- a/Titanic Data Project.ipynb
+++ b/Titanic Data Project.ipynb
@@ -6,12 +6,14 @@
    "source": [
     "# A look into who survived the sinking of the Titanic\n",
     "\n",
-    "This analysis serves to explore a sample of Titanic passengers for various insights into who surived. It will answer the following question. Which factors made a passenger more likely to survive the sinking of the Titanic?"
+    "This analysis serves to explore a sample of Titanic passengers for various insights into who surived. It will answer the following question. Which factors made a passenger more likely to survive the sinking of the Titanic?\n",
+    "\n",
+    "It is a tentative work in progress."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 67,
    "metadata": {
     "collapsed": false
    },
@@ -122,6 +124,216 @@
        "      <td>NaN</td>\n",
        "      <td>S</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Moran, Mr. James</td>\n",
+       "      <td>male</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>330877</td>\n",
+       "      <td>8.4583</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Q</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>McCarthy, Mr. Timothy J</td>\n",
+       "      <td>male</td>\n",
+       "      <td>54.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>17463</td>\n",
+       "      <td>51.8625</td>\n",
+       "      <td>E46</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Palsson, Master. Gosta Leonard</td>\n",
+       "      <td>male</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>349909</td>\n",
+       "      <td>21.0750</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Johnson, Mrs. Oscar W (Elisabeth Vilhelmina Berg)</td>\n",
+       "      <td>female</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>347742</td>\n",
+       "      <td>11.1333</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Nasser, Mrs. Nicholas (Adele Achem)</td>\n",
+       "      <td>female</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>237736</td>\n",
+       "      <td>30.0708</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Sandstrom, Miss. Marguerite Rut</td>\n",
+       "      <td>female</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>PP 9549</td>\n",
+       "      <td>16.7000</td>\n",
+       "      <td>G6</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Bonnell, Miss. Elizabeth</td>\n",
+       "      <td>female</td>\n",
+       "      <td>58.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>113783</td>\n",
+       "      <td>26.5500</td>\n",
+       "      <td>C103</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Saundercock, Mr. William Henry</td>\n",
+       "      <td>male</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>A/5. 2151</td>\n",
+       "      <td>8.0500</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Andersson, Mr. Anders Johan</td>\n",
+       "      <td>male</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>347082</td>\n",
+       "      <td>31.2750</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Vestrom, Miss. Hulda Amanda Adolfina</td>\n",
+       "      <td>female</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>350406</td>\n",
+       "      <td>7.8542</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Hewlett, Mrs. (Mary D Kingcome)</td>\n",
+       "      <td>female</td>\n",
+       "      <td>55.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>248706</td>\n",
+       "      <td>16.0000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Rice, Master. Eugene</td>\n",
+       "      <td>male</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>382652</td>\n",
+       "      <td>29.1250</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Q</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Williams, Mr. Charles Eugene</td>\n",
+       "      <td>male</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>244373</td>\n",
+       "      <td>13.0000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Vander Planke, Mrs. Julius (Emelia Maria Vande...</td>\n",
+       "      <td>female</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>345763</td>\n",
+       "      <td>18.0000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Masselmani, Mrs. Fatima</td>\n",
+       "      <td>female</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2649</td>\n",
+       "      <td>7.2250</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -134,6 +346,21 @@
        "3                   1       3   \n",
        "4                   1       1   \n",
        "5                   0       3   \n",
+       "6                   0       3   \n",
+       "7                   0       1   \n",
+       "8                   0       3   \n",
+       "9                   1       3   \n",
+       "10                  1       2   \n",
+       "11                  1       3   \n",
+       "12                  1       1   \n",
+       "13                  0       3   \n",
+       "14                  0       3   \n",
+       "15                  0       3   \n",
+       "16                  1       2   \n",
+       "17                  0       3   \n",
+       "18                  1       2   \n",
+       "19                  0       3   \n",
+       "20                  1       3   \n",
        "\n",
        "                                                          Name     Sex   Age  \\\n",
        "PassengerId                                                                    \n",
@@ -142,6 +369,21 @@
        "3                                       Heikkinen, Miss. Laina  female  26.0   \n",
        "4                 Futrelle, Mrs. Jacques Heath (Lily May Peel)  female  35.0   \n",
        "5                                     Allen, Mr. William Henry    male  35.0   \n",
+       "6                                             Moran, Mr. James    male   NaN   \n",
+       "7                                      McCarthy, Mr. Timothy J    male  54.0   \n",
+       "8                               Palsson, Master. Gosta Leonard    male   2.0   \n",
+       "9            Johnson, Mrs. Oscar W (Elisabeth Vilhelmina Berg)  female  27.0   \n",
+       "10                         Nasser, Mrs. Nicholas (Adele Achem)  female  14.0   \n",
+       "11                             Sandstrom, Miss. Marguerite Rut  female   4.0   \n",
+       "12                                    Bonnell, Miss. Elizabeth  female  58.0   \n",
+       "13                              Saundercock, Mr. William Henry    male  20.0   \n",
+       "14                                 Andersson, Mr. Anders Johan    male  39.0   \n",
+       "15                        Vestrom, Miss. Hulda Amanda Adolfina  female  14.0   \n",
+       "16                            Hewlett, Mrs. (Mary D Kingcome)   female  55.0   \n",
+       "17                                        Rice, Master. Eugene    male   2.0   \n",
+       "18                                Williams, Mr. Charles Eugene    male   NaN   \n",
+       "19           Vander Planke, Mrs. Julius (Emelia Maria Vande...  female  31.0   \n",
+       "20                                     Masselmani, Mrs. Fatima  female   NaN   \n",
        "\n",
        "             SibSp  Parch            Ticket     Fare Cabin Embarked  \n",
        "PassengerId                                                          \n",
@@ -149,10 +391,25 @@
        "2                1      0          PC 17599  71.2833   C85        C  \n",
        "3                0      0  STON/O2. 3101282   7.9250   NaN        S  \n",
        "4                1      0            113803  53.1000  C123        S  \n",
-       "5                0      0            373450   8.0500   NaN        S  "
+       "5                0      0            373450   8.0500   NaN        S  \n",
+       "6                0      0            330877   8.4583   NaN        Q  \n",
+       "7                0      0             17463  51.8625   E46        S  \n",
+       "8                3      1            349909  21.0750   NaN        S  \n",
+       "9                0      2            347742  11.1333   NaN        S  \n",
+       "10               1      0            237736  30.0708   NaN        C  \n",
+       "11               1      1           PP 9549  16.7000    G6        S  \n",
+       "12               0      0            113783  26.5500  C103        S  \n",
+       "13               0      0         A/5. 2151   8.0500   NaN        S  \n",
+       "14               1      5            347082  31.2750   NaN        S  \n",
+       "15               0      0            350406   7.8542   NaN        S  \n",
+       "16               0      0            248706  16.0000   NaN        S  \n",
+       "17               4      1            382652  29.1250   NaN        Q  \n",
+       "18               0      0            244373  13.0000   NaN        S  \n",
+       "19               1      0            345763  18.0000   NaN        S  \n",
+       "20               0      0              2649   7.2250   NaN        C  "
       ]
      },
-     "execution_count": 57,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,7 +420,7 @@
     "\n",
     "passenger_data = pd.read_csv('titanic-data.csv', index_col='PassengerId')\n",
     "\n",
-    "passenger_data.head(5)"
+    "passenger_data.head(20)"
    ]
   },
   {
@@ -229,6 +486,60 @@
    ],
    "source": [
     "print passenger_data.groupby('Sex').mean()['Survived']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Survival rate by age\n",
+    "\n",
+    "This analysis breaks passengers into three age groups: children (0-14 years old), adolescents (14-20 years old), and adults (21+ years old). This is an arbitrary distinction that probably reflects a modern bias, but hopefully it yields equally interesting insights.\n",
+    "\n",
+    "### 58.4% of children survived\n",
+    "\n",
+    "### 36.3% of adolescents survived\n",
+    "\n",
+    "### 38.9% of adults survived"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "age_group\n",
+      "Children       0.584416\n",
+      "Adolescents    0.362745\n",
+      "Adults         0.388785\n",
+      "Name: Survived, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# note: while the data has a number of empty values for age,\n",
+    "#       the mean() function ignores those, so we can safely\n",
+    "#       calculate it without modifying that column\n",
+    "\n",
+    "# data wrangling: added a new column 'age_group' to passenger_data\n",
+    "#                 so that we can easily calculate the mean survival rate\n",
+    "\n",
+    "# define the bin values and group names\n",
+    "bins = [0,14,20,100]\n",
+    "group_names = ['Children', 'Adolescents', 'Adults']\n",
+    "\n",
+    "# create a new column 'age_group' and add it to the data\n",
+    "age_group = pd.cut(passenger_data['Age'], bins, labels=group_names)\n",
+    "passenger_data['age_group'] = age_group\n",
+    "\n",
+    "# get survival rate by age group\n",
+    "print passenger_data.groupby('age_group').mean()['Survived']"
    ]
   },
   {
