data wrangling - age group

--- a/Titanic Data Project.ipynb
+++ b/Titanic Data Project.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# A look into who survived the sinking of the Titanic\n",
     "\n",
-    "This analysis serves to explore a sample of Titanic passengers for various insights into who surived. It will answer the following question. Which factors made a passenger more likely to survive the sinking of the Titanic?\n",
+    "This analysis explores a sample of Titanic passengers for various insights into who surived. It will answer the following question. Which factors made a passenger more likely to survive the sinking of the Titanic?\n",
     "\n",
     "It is a tentative work in progress."
    ]
