--- a/Titanic Data Project.ipynb
+++ b/Titanic Data Project.ipynb
@@ -450,6 +450,12 @@
     }
    ],
    "source": [
+    "# note: for survival rate,\n",
+    "#       it's safe to use the mean() value of the Survived column,\n",
+    "#       since 1 represents survived and 0 represents didn't survived,\n",
+    "#       and the mean simply adds those values up and divides by the total\n",
+    "#       number of passengers\n",
+    "\n",
     "print passenger_data.mean()['Survived']"
    ]
   },
